# hobot_msgs

./: README.md
ai_msgs/: CHANGELOG.md  CMakeLists.txt  README.md  package.xml
ai_msgs/msg/: Attribute.msg  Capture.msg  CaptureTargets.msg  DBResult.msg  PerceptionTargets.msg  Perf.msg  Point.msg  Roi.msg  Target.msg
audio_msg/: CHANGELOG.md  CMakeLists.txt  README.md  package.xml
audio_msg/msg/: AudioEventType.msg  AudioFrame.msg  AudioFrameType.msg  SmartAudioData.msg  SmartAudioFrameType.msg
hbm_img_msgs/: CHANGELOG.md  CMakeLists.txt  README.md  package.xml
hbm_img_msgs/msg/: HbmH26XFrame.msg  HbmMsg1080P.msg  HbmMsg480P.msg  HbmMsg540P.msg
img_msgs/: CHANGELOG.md  CMakeLists.txt  README.md  package.xml
img_msgs/msg/: H26XFrame.msg
